Fix splash overlay blocking clicks and finalize site interactivity
- Fixed splash intro logic so the overlay fully releases the page after fade-out
- Ensured splash respects prefers-reduced-motion and includes a fallback removal
- Enabled real navigation by linking to actual pages (index, about, contact)
- Increased header logo icon size 2x for better brand visibility
- Consolidated splash CSS to prevent future interaction-blocking regressions
- Verified no elements intercept pointer events after intro

--- a/splash.html
+++ b/splash.html
@@ -133,20 +133,30 @@
     function hideSplash() {
       const splash = document.getElementById('splash');
       if (!splash) return;
-      setTimeout(() => {
-        splash.classList.add('splash--hide');
-        splash.addEventListener('transitionend', function handler() {
-          splash.setAttribute('aria-hidden', 'true');
-          splash.style.pointerEvents = 'none';
-          splash.removeEventListener('transitionend', handler);
-        });
-      }, 900);
+        setTimeout(() => {
+          splash.classList.add('splash--hide');
+          let removed = false;
+          function cleanup() {
+            if (removed) return;
+            removed = true;
+            splash.setAttribute('aria-hidden', 'true');
+            splash.style.pointerEvents = 'none';
+            splash.remove();
+          }
+          splash.addEventListener('transitionend', function handler() {
+            cleanup();
+            splash.removeEventListener('transitionend', handler);
+          });
+          // Fallback: remove after 1.5s if transitionend doesn't fire
+          setTimeout(cleanup, 1500);
+        }, 900);
     }
     if (window.matchMedia('(prefers-reduced-motion: reduce)').matches) {
       const splash = document.getElementById('splash');
-      splash.style.opacity = '0';
-      splash.setAttribute('aria-hidden', 'true');
-      splash.style.pointerEvents = 'none';
+        splash.style.opacity = '0';
+        splash.setAttribute('aria-hidden', 'true');
+        splash.style.pointerEvents = 'none';
+        splash.remove();
     } else {
       window.addEventListener('load', hideSplash);
     }
