--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       gap: 1rem;
     }
     .logo {
-      height: 52px;
+      height: 104px;
       width: auto;
       display: block;
       border-radius: 0.5em;
@@ -45,9 +45,9 @@
         flex-direction: row;
         padding: 0.7rem 3vw;
       }
-      .logo {
-        height: 40px;
-      }
+        .logo {
+          height: 80px;
+        }
       nav {
         gap: 1.2rem;
       }
@@ -119,7 +119,9 @@
   <main>
     <!-- Main content here -->
   </main>
-
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
   <footer>
     <div class="footer-content">
       <span class="muted">Site by Fee The Developer</span>
